--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  background-color: brown;
+  background-color: red;
   color: white;
+  width: 200px; height: 200px;
   font-size: 24px;
 }
