SASS folder added

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: green;
+  background-color: orange;
   color: white;
   width: 200px; height: 200px;
   font-size: 24px;
