--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,9 +1,9 @@
+$color: yellow;
+
 body {
-  background: yellow;
+  background: $color;
   color: red;
   font-weight: bold;
   font-size: 24px;
   font-size: 34px !important;
 }
-
-/*# sourceMappingURL=style.css.map */
